# Letra

./: .gitignore  CMakeLists.txt  README.md
src/: application.cpp  application.hpp  buffer.cpp  buffer.hpp  editor.cpp  editor.hpp  file.cpp  file.hpp  main.cpp  window.cpp  window.hpp
src/editor/: buffer.cpp  buffer.hpp  command_prompt.cpp  command_prompt.hpp  cursor.cpp  cursor.hpp  editor.cpp  editor.hpp
src/graphics/: drawable.cpp  drawable.hpp  rectangle.cpp  rectangle.hpp  renderer.cpp  renderer.hpp  text.cpp  text.hpp
src/log/: colorido.cpp  log.cpp
src/ui/: base_window.cpp  base_window.hpp  renderer.cpp  renderer.hpp  text.cpp  text.hpp  window.cpp  window.hpp
src/util/: color.cpp  color.hpp  log.hpp
src/window/: base_window.hpp  window.cpp  window.hpp
